# qwery-core

./: .env.example  .gitignore  LIMITAION.md  PERFORMANCE_ANALYSIS.md  README.md  README_TESTING.md  TESTING_INTEGRATION.md  env.template  package.json  pnpm-lock.yaml  pr-description.md  pyproject.toml  test-cli-sheet.sh  turbo.json
data_storage/: query_results_0112ef7a.csv  query_results_19ee22af.csv  query_results_1d23047f.csv  query_results_2123ab4b.csv  query_results_2160186e.csv  query_results_40319473.csv  query_results_45e992da.csv  query_results_490421d7.csv  query_results_493b3c06.csv  query_results_57782b70.csv  query_results_5ea9eba0.csv  query_results_616e6985.csv  query_results_6fb45b8a.csv  query_results_6fe889b3.csv  query_results_762d7f22.csv  query_results_9735d1dc.csv  query_results_97d77b7f.csv  query_results_99236f17.csv  query_results_9dec7e7d.csv  query_results_ad113820.csv  query_results_bb77dff0.csv  query_results_c52106f3.csv  query_results_d2321e2a.csv  query_results_e42e52b8.csv  query_results_f8ec7817.csv
scripts/: bootstrap_db.py  setup_venv.sh  test_all.sh  test_concurrent_ws.py  test_db_pool.sh  test_load.sh  test_rate_limit.sh  test_scalability.sh  test_streaming.sh  test_streaming_detailed.py  ws_cli.py
tests/: README_TIMING_TESTS.md  RUN_TIMING_TESTS.sh  test_agent.py  test_cli_supabase.py  test_fastapi_routes.py  test_streaming_endpoint.py  test_streaming_works.py  test_supabase_auth.py  test_supabase_session_manager.py  test_timing_logs_agent.py  test_timing_logs_llm.py  test_timing_logs_sql_runner.py  test_timing_logs_tools.py  (+3 more)
(+164 files in other folders)
